--- a/.gitignore
+++ b/.gitignore
@@ -83,6 +83,7 @@ Makefile
 # libtool
 .deps
 .libs
+/.version
 /libtool
 /ltmain.sh
 /m4/libtool.m4
@@ -136,7 +137,5 @@ tests/t[0-9][0-9][0-9]*
 
 /t/sb/*-0
 
-
 # Added by cargo
-
 /target
