--- a/t/test-lib.sh.in
+++ b/t/test-lib.sh.in
@@ -732,3 +732,6 @@ test x"@SYDBOX_HAVE_NEWFSTATAT@" = x"0" || test_set_prereq HAVE_NEWFSTATAT
 # Some tests won't fail with permission denied as expected when running as the
 # root user. Let's set a prereq to catch such cases and skip tests as necessary.
 test x"`id -u`" = x"0" || test_set_prereq NOT_ROOT
+
+# dig is used to test network sandboxing.
+test x"`which dig`" = x"" || test_set_prereq DIG
