--- a/t/test-lib.sh.in
+++ b/t/test-lib.sh.in
@@ -735,3 +735,7 @@ test x"`id -u`" = x"0" || test_set_prereq NOT_ROOT
 
 # dig is used to test network sandboxing.
 test x"`which dig`" = x"" || test_set_prereq DIG
+
+# Check if we're running on buildhost.
+test -n "$JOB_ID" && test_set_prereq ON_BUILD_HOST
+test -z "$JOB_ID" && test_set_prereq NOT_ON_BUILD_HOST
