more work on seccomp user notify
Signed-off-by: Alï Polatel <alip@exherbo.org>

--- a/src/Makefile.am
+++ b/src/Makefile.am
@@ -41,6 +41,7 @@ noinst_HEADERS+= \
 		 pathlookup.h \
 		 pink.h \
 		 proc.h \
+		 rule.h \
 		 pathdecode.h \
 		 pathmatch.h \
 		 procmatch.h \
