--- a/configure.ac
+++ b/configure.ac
@@ -84,6 +84,8 @@ AC_PROG_MAKE_SET
 AC_PROG_MKDIR_P
 AC_PROG_SED
 LT_INIT
+AC_PROG_YACC
+AM_PROG_LEX
 
 AM_CONDITIONAL([HAVE_GNU_CC], [test x"$GCC" = x"yes"])
 AM_CONDITIONAL([HAVE_GNU_LD], [test x"$with_gnu_ld" = x"yes"])
