--- a/configure.ac
+++ b/configure.ac
@@ -73,11 +73,15 @@ m4_defun([_LT_AC_LANG_F77_CONFIG], [:])
 dnl toolchain checks
 : ${CFLAGS=""}
 AC_USE_SYSTEM_EXTENSIONS
+AC_PROG_LD
 AC_PROG_CC_C99
 if test x"$ac_cv_prog_cc_c99" = x"no"; then
 	AC_MSG_ERROR([sydbox requires a C compiler that supports ISO C99!])
 fi
-AC_PROG_LD
+CX_PTHREAD
+LIBS="$PTHREAD_LIBS $LIBS"
+CFLAGS="$CFLAGS $PTHREAD_CFLAGS"
+CC="$PTHREAD_CC"
 AC_PROG_INSTALL
 AC_PROG_LN_S
 AC_PROG_MAKE_SET
