--- a/src/Makefile.am
+++ b/src/Makefile.am
@@ -20,6 +20,7 @@ AM_CFLAGS= \
 	   -I$(top_srcdir)/syd \
 	   -I$(top_builddir) \
 	   -I$(top_srcdir) \
+	   $(PTHREAD_CFLAGS) \
 	   $(pinktrace_CFLAGS) \
 	   $(libseccomp_CFLAGS) \
 	   @SYDBOX_CFLAGS@
@@ -123,8 +124,10 @@ sydbox_SOURCES+= \
 noinst_HEADERS+= \
 		 sys-queue.h
 
-sydbox_LDFLAGS= -lsyd_@LIBSYD_PC_SLOT@
-sydbox_LDADD= -L$(top_builddir)/syd/.libs -lsyd_@LIBSYD_PC_SLOT@ $(pinktrace_LIBS) $(libseccomp_LIBS)
+sydbox_LDFLAGS= $(PTHREAD_LIBS) -lsyd_@LIBSYD_PC_SLOT@
+sydbox_LDADD= -L$(top_builddir)/syd/.libs -lsyd_@LIBSYD_PC_SLOT@ \
+	      $(pinktrace_LIBS) \
+	      $(libseccomp_LIBS)
 if WANT_DEBUG
 sydbox_LDADD+= $(libunwind_LIBS)
 endif
