sydbox: stop wrapping pinktrace functions in dump
Signed-off-by: Alï Polatel <alip@exherbo.org>

--- a/src/Makefile.am
+++ b/src/Makefile.am
@@ -140,31 +140,7 @@ DUMP_COMPILER_FLAGS= $(AM_CFLAGS) -O0 -g -ggdb3
 DUMP_PREPROCESSOR_FLAGS= -DSYDBOX_DUMP
 DUMP_LINKER_LIBRARY_ADD= $(sydbox_LIBADD)
 DUMP_LINKER_ADD=
-DUMP_LINKER_FLAGS= \
-	  -Wl,--wrap=pink_trace_resume \
-	  -Wl,--wrap=pink_trace_kill \
-	  -Wl,--wrap=pink_trace_singlestep \
-	  -Wl,--wrap=pink_trace_syscall \
-	  -Wl,--wrap=pink_trace_geteventmsg \
-	  -Wl,--wrap=pink_trace_get_regs \
-	  -Wl,--wrap=pink_trace_get_regset \
-	  -Wl,--wrap=pink_trace_set_regs \
-	  -Wl,--wrap=pink_trace_set_regset \
-	  -Wl,--wrap=pink_trace_get_siginfo \
-	  -Wl,--wrap=pink_trace_setup \
-	  -Wl,--wrap=pink_trace_sysemu \
-	  -Wl,--wrap=pink_trace_sysemu_singlestep \
-	  -Wl,--wrap=pink_trace_attach \
-	  -Wl,--wrap=pink_trace_detach \
-	  -Wl,--wrap=pink_trace_seize \
-	  -Wl,--wrap=pink_trace_interrupt \
-	  -Wl,--wrap=pink_trace_listen \
-	  -Wl,--wrap=pink_write_syscall \
-	  -Wl,--wrap=pink_read_syscall \
-	  -Wl,--wrap=pink_read_argument \
-	  -Wl,--wrap=pink_read_vm_data_nul \
-	  -Wl,--wrap=pink_read_socket_argument \
-	  -Wl,--wrap=pink_read_socket_address
+DUMP_LINKER_FLAGS=
 
 syddir=$(libexecdir)/$(PACKAGE)/dump
 syd_SCRIPTS= shoebox
