test: tweak CFLAGS for static test binaries
Signed-off-by: Alï Polatel <alip@exherbo.org>

--- a/t/test-bin/Makefile.am
+++ b/t/test-bin/Makefile.am
@@ -8,13 +8,16 @@ CLEANFILES= \
 	    *.gcov
 
 # Use -DNDEBUG so as not to require sydbox' assert() override
-AM_CPPFLAGS = $(DEFS) -I$(top_builddir) -I$(top_srcdir) -I$(top_srcdir)/src
-AM_CFLAGS = $(pinktrace_CFLAGS) \
-	    @SYDBOX_CFLAGS@ -DNDEBUG \
-	    `expr $@ : .*-pthread >/dev/null && echo $(PTRACE_CFLAGS)`
-AM_LDFLAGS = $(pinktrace_LIBS) \
-	     `expr $@ : .*-pthread >/dev/null && echo $(PTHREAD_LIBS)`
-	     `expr $@ : .*-static >/dev/null && echo -all-static`
+AM_CPPFLAGS = $(DEFS) \
+	      -I$(top_builddir) -I$(top_srcdir) -I$(top_srcdir)/src \
+	      @SYDBOX_CFLAGS@ -DNDEBUG
+AM_CFLAGS = \
+	    `expr $@ : .*-pthread >/dev/null && echo $(PTHREAD_CFLAGS)` \
+	    `expr $@ : .*-static >/dev/null || echo $(pinktrace_CFLAGS)`
+AM_LDFLAGS = \
+	     `expr $@ : .*-static >/dev/null && echo -all-static` \
+	     `expr $@ : .*-pthread >/dev/null && echo $(PTHREAD_LIBS)` \
+	     `expr $@ : .*-static >/dev/null || echo $(pinktrace_LIBS)`
 
 wildtest_SOURCES= tap.h wildtest.c
 wildtest_CFLAGS= \
