more dump improvements
Signed-off-by: Alï Polatel <alip@exherbo.org>

--- a/src/Makefile.am
+++ b/src/Makefile.am
@@ -137,7 +137,7 @@ endif
 
 DUMP_SRCS= dump.c
 DUMP_COMPILER_FLAGS= $(AM_CFLAGS) -O0 -g -ggdb3
-DUMP_PREPROCESSOR_FLAGS= -DSYDBOX_DUMP
+DUMP_PREPROCESSOR_FLAGS= -DSYDBOX_DUMP=1
 DUMP_LINKER_LIBRARY_ADD= $(sydbox_LIBADD)
 DUMP_LINKER_ADD=
 DUMP_LINKER_FLAGS=
@@ -163,7 +163,6 @@ sydbox_dump_LDFLAGS=
 
 if SYDBOX_HAVE_DUMP_BUILTIN
 sydbox_SOURCES+= $(DUMP_SRCS)
-sydbox_CPPFLAGS+= $(DUMP_PREPROCESSOR_FLAGS)
 sydbox_LDADD+= $(DUMP_LINKER_ADD)
 sydbox_LDFLAGS+= $(DUMP_LINKER_FLAGS)
 sydbox_dump_SOURCES+= $(sydbox_SOURCES)
