tests: add test program for multithreaded execve
Signed-off-by: Alï Polatel <alip@exherbo.org>

--- a/t/test-bin/Makefile.am
+++ b/t/test-bin/Makefile.am
@@ -30,6 +30,7 @@ realpath_mode_1_SOURCES= realpath_mode-1.c \
 			 $(top_srcdir)/src/strlcpy.c \
 			 $(top_srcdir)/src/file.c \
 			 $(top_srcdir)/src/util.c \
+			 $(top_srcdir)/src/errno2name.c \ \
 			 $(top_srcdir)/src/xfunc.c
 realpath_mode_1_CFLAGS= $(AM_CFLAGS) -DSYDBOX_NDUMP
 
@@ -39,14 +40,20 @@ sockmatchtest_SOURCES= sockmatchtest.c \
 		       $(top_srcdir)/src/sockmatch.c \
 		       $(top_srcdir)/src/util.c \
 		       $(top_srcdir)/src/wildmatch.c \
+		       $(top_srcdir)/src/errno2name.c \ \
 		       $(top_srcdir)/src/xfunc.c
 sockmatchtest_CFLAGS= $(AM_CFLAGS) -DSYDBOX_NDUMP
+
+threads_execve_SOURCES= threads_execve.c \
+			$(top_srcdir)/src/errno2name.c
+threads_execve_CFLAGS= $(AM_CFLAGS)
 
 syddir=$(libexecdir)/$(PACKAGE)/t/test-bin
 syd_PROGRAMS= wildtest realpath_mode-1 sockmatchtest \
 	      syd-true syd-true-static syd-true-fork syd-true-fork-static syd-true-pthread \
 	      syd-false syd-false-static syd-false-fork syd-false-fork-static syd-false-pthread \
 	      syd-abort syd-abort-static syd-abort-fork syd-abort-fork-static \
-	      syd-abort-pthread syd-abort-pthread-static syd-fstatat syd-mkdir-p syd-open-static
+	      syd-abort-pthread syd-abort-pthread-static syd-fstatat syd-mkdir-p syd-open-static \
+	      threads_execve
 
 check_PROGRAMS= $(syd_PROGRAMS)
