sydbox: add valgrind suppressions file
Signed-off-by: Alï Polatel <alip@exherbo.org>

--- a/data/Makefile.am
+++ b/data/Makefile.am
@@ -3,7 +3,8 @@ EXTRA_DIST=
 
 sydboxsharedir= $(datadir)/$(PACKAGE)
 sydboxshare_DATA= \
-		  paludis.syd-1
+		  paludis.syd-1 \
+		  sydbox.supp
 EXTRA_DIST+= $(sydboxshare_DATA)
 
 dist_doc_DATA= \
