--- a/t/test-lib.sh.in
+++ b/t/test-lib.sh.in
@@ -1227,76 +1227,9 @@ then
 fi
 if test -n "$valgrind"
 then
-	make_symlink () {
-		test -h "$2" &&
-		test "$1" = "$(readlink "$2")" || {
-			# be super paranoid
-			if mkdir "$2".lock
-			then
-				rm -f "$2" &&
-				ln -s "$1" "$2" &&
-				rm -r "$2".lock
-			else
-				while test -d "$2".lock
-				do
-					say "Waiting for lock on $2."
-					sleep 1
-				done
-			fi
-		}
-	}
-
-	make_valgrind_symlink () {
-		# handle only executables, unless they are shell libraries that
-		# need to be in the exec-path.
-		test -x "$1" ||
-		test "# " = "$(test_copy_bytes 2 <"$1")" ||
-		return;
-
-		base=$(basename "$1")
-		case "$base" in
-		test-*)
-			symlink_target="$SYDBOX_BUILD_DIR/t/helper/$base"
-			;;
-		*)
-			symlink_target="$SYDBOX_BUILD_DIR/$base"
-			;;
-		esac
-		# do not override scripts
-		if test -x "$symlink_target" &&
-		    test ! -d "$symlink_target" &&
-		    test "#!" != "$(test_copy_bytes 2 <"$symlink_target")"
-		then
-			symlink_target=../valgrind.sh
-		fi
-		case "$base" in
-		*.sh|*.perl)
-			symlink_target=../unprocessed-script
-		esac
-		# create the link, or replace it if it is out of date
-		make_symlink "$symlink_target" "$SYDBOX_VALGRIND/bin/$base" || exit
-	}
-
 	# override all git executables in TEST_DIRECTORY/..
 	SYDBOX_VALGRIND=$TEST_DIRECTORY/valgrind
 	mkdir -p "$SYDBOX_VALGRIND"/bin
-	for file in $SYDBOX_BUILD_DIR/git* $SYDBOX_BUILD_DIR/t/helper/test-*
-	do
-		make_valgrind_symlink $file
-	done
-	# special-case the mergetools loadables
-	make_symlink "$SYDBOX_BUILD_DIR"/mergetools "$SYDBOX_VALGRIND/bin/mergetools"
-	OLDIFS=$IFS
-	IFS=:
-	for path in $PATH
-	do
-		ls "$path"/git-* 2> /dev/null |
-		while read file
-		do
-			make_valgrind_symlink "$file"
-		done
-	done
-	IFS=$OLDIFS
 	PATH=$SYDBOX_VALGRIND/bin:$PATH
 	SYDBOX_EXEC_PATH=$SYDBOX_VALGRIND/bin
 	export SYDBOX_VALGRIND
@@ -1333,6 +1266,7 @@ else # normal case, use ../bin-wrappers only unless $with_dashes:
 		PATH="$SYDBOX_BUILD_DIR:$SYDBOX_BUILD_DIR/t/helper:$PATH"
 	fi
 fi
+export PATH
 
 if test -z "$SYDBOX_TEST_CMP"
 then
