--- a/.builds/x86_64-archlinux.yml
+++ b/.builds/x86_64-archlinux.yml
@@ -17,7 +17,6 @@ packages:
 - bash
 - vim
 sources:
-- https://git.sr.ht/~alip/pinktrace
 - https://git.sr.ht/~alip/sydbox
 tasks:
 - init: |
@@ -35,36 +34,11 @@ tasks:
     bzip2 --version || true
     xsltproc --version
     dig -v
-- pinktrace_conf: |
     mkdir root
-    cd pinktrace
-    ./autogen.sh
-    ./configure --prefix=$(readlink -f ../root) --enable-ipv6 --disable-python
-- pinktrace_make: |
-    cd pinktrace
-    make -j V=1
-- pinktrace_inst: |
-    cd pinktrace
-    make -j install
-- conf_seccomp: |
-    cd sydbox
-    ./autogen.sh
-    PKG_CONFIG_PATH=$(readlink -f ../root/lib/pkgconfig) ./configure --enable-seccomp
-- make_seccomp: |
-    cd sydbox
-    make -j V=1
-- check_seccomp: |
-    cd sydbox
-    make -j V=1 check && touch .check_ok
-    cat {syd,t}/test-suite.log || true
-    test -e .check_ok
-- clean: |
-    cd sydbox
-    make clean
-    rm -f .check_ok
 - conf: |
     cd sydbox
-    PKG_CONFIG_PATH=$(readlink -f ../root/lib/pkgconfig) ./configure --disable-seccomp
+    ./autogen.sh
+    PKG_CONFIG_PATH=$(readlink -f ../root/lib/pkgconfig) ./configure
 - make: |
     cd sydbox
     make -j V=1
@@ -73,3 +47,7 @@ tasks:
     make -j V=1 check && touch .check_ok
     cat {syd,t}/test-suite.log || true
     test -e .check_ok
+- clean: |
+    cd sydbox
+    make clean
+    rm -f .check_ok
