--- a/t/test-bin/Makefile.am
+++ b/t/test-bin/Makefile.am
@@ -28,7 +28,7 @@ realpath_mode_1_SOURCES= realpath_mode-1.c \
 			 $(top_srcdir)/src/strlcpy.c \
 			 $(top_srcdir)/src/file.c \
 			 $(top_srcdir)/src/util.c \
-			 $(top_srcdir)/src/errno2name.c \ \
+			 $(top_srcdir)/src/errno2name.c \
 			 $(top_srcdir)/src/xfunc.c
 realpath_mode_1_CFLAGS= $(AM_CFLAGS) -DSYDBOX_NDUMP
 
@@ -38,7 +38,7 @@ sockmatchtest_SOURCES= sockmatchtest.c \
 		       $(top_srcdir)/src/sockmatch.c \
 		       $(top_srcdir)/src/util.c \
 		       $(top_srcdir)/src/wildmatch.c \
-		       $(top_srcdir)/src/errno2name.c \ \
+		       $(top_srcdir)/src/errno2name.c \
 		       $(top_srcdir)/src/xfunc.c
 sockmatchtest_CFLAGS= $(AM_CFLAGS) -DSYDBOX_NDUMP
 
