--- a/t/test-lib.sh.in
+++ b/t/test-lib.sh.in
@@ -21,6 +21,12 @@ ORIGINAL_TERM=$TERM
 # Timeouts for tests that need them.
 TIMEOUT_DURATION=60
 
+# Install directories
+BINDIR="@BINDIR@"
+LIBEXECDIR="@LIBEXECDIR@"
+export BINDIR
+export LIBEXECDIR
+
 # Test the binaries we have just built.  The tests are kept in
 # t/ subdirectory and are run in 'trash directory' subdirectory.
 if test -z "$TEST_DIRECTORY"
@@ -949,10 +955,15 @@ test_run_ () {
 		trace=
 		# 117 is magic because it is unlikely to match the exit
 		# code of other programs
+		if test -n "$SYDBOX_TEST_INSTALLED"; then
+			chainlint="@LIBEXECDIR@/sydbox/t/chainlint.sed"
+		else
+			chainlint="$SYDBOX_BUILD_DIR/t/chainlint.sed"
+		fi
 		if test "OK-117" != "$(test_eval_ "(exit 117) && $1${LF}${LF}echo OK-\$?" 3>&1)" ||
 		   {
 			test "${SYDBOX_TEST_CHAIN_LINT_HARDER:-${SYDBOX_TEST_CHAIN_LINT_HARDER_DEFAULT:-1}}" != 0 &&
-			$(printf '%s\n' "$1" | sed -f "$SYDBOX_BUILD_DIR/t/chainlint.sed" | grep -q '?![A-Z][A-Z]*?!')
+			$(printf '%s\n' "$1" | sed -f "$chainlint" | grep -q '?![A-Z][A-Z]*?!')
 		   }
 		then
 			BUG "broken &&-chain or run-away HERE-DOC: $1"
@@ -1240,9 +1251,8 @@ then
 	export SYDBOX_VALGRIND_ENABLED
 elif test -n "$SYDBOX_TEST_INSTALLED"
 then
-	SYDBOX_EXEC_PATH=$($SYDBOX_TEST_INSTALLED/git --exec-path)  ||
-	error "Cannot run git from $SYDBOX_TEST_INSTALLED."
-	PATH=$SYDBOX_TEST_INSTALLED:$SYDBOX_BUILD_DIR/t/helper:$PATH
+	SYDBOX_EXEC_PATH="@LIBEXECDIR@/sydbox/t/bin-wrappers"
+	PATH=$SYDBOX_EXEC_PATH:$SYDBOX_BUILD_DIR/t/helper:$PATH
 	SYDBOX_EXEC_PATH=${SYDBOX_TEST_EXEC_PATH:-$SYDBOX_EXEC_PATH}
 else # normal case, use ../bin-wrappers only unless $with_dashes:
 	if test -n "$no_bin_wrappers"
