man: update sydbox.exherbo.org
Signed-off-by: Alï Polatel <alip@exherbo.org>

--- a/man/Makefile.am
+++ b/man/Makefile.am
@@ -43,8 +43,9 @@ dist_html_DATA= \
 		sydfmt.html
 
 upload: sydbox.html sydfmt.html
-	rsync --progress -ave ssh sydbox.html strauss.exherbo.org:public_html/sydbox/
-	rsync --progress -ave ssh sydfmt.html strauss.exherbo.org:public_html/sydbox/
+	rsync --progress -ave ssh sydbox.html dev.exherbo.org:public_html/sydbox/
+	rsync --progress -ave ssh sydbox.html dev.exherbo.org:www
+	rsync --progress -ave ssh sydfmt.html dev.exherbo.org:public_html/sydbox/
 .PHONY: upload
 else
 sydbox.1:
